bk_ida/gccida/c0/emit_library_call_value_1
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_library_call_value_1/src/calls.c:3905:1: error: must use 'enum' tag to refer to type 'libcall_type'
libcall_type fn_type, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_library_call_value_1/src/calls.c:3906:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode outmode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_library_call_value_1/src/calls.c:3901:6: error: conflicting types for 'emit_library_call_value_1'
rtx  emit_library_call_value_1( 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_library_call_value_1/src/calls.c:213:12: note: previous declaration is here
static rtx emit_library_call_value_1            PARAMS ((int, rtx, rtx,
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_library_call_value_1/src/calls.c:3910:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_library_call_value_1/src/calls.c:3911:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_library_call_value_1/src/calls.c:3912:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_library_call_value_1/src/calls.c:3913:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_library_call_value_1/src/calls.c:3915:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_library_call_value_1/src/calls.c:3917:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_library_call_value_1/src/calls.c:3922:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v19; // rcx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_library_call_value_1/src/calls.c:3923:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v20; // rdx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_library_call_value_1/src/calls.c:3941:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v38; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_library_call_value_1/src/calls.c:3943:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v40; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_library_call_value_1/src/calls.c:3948:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v45; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_library_call_value_1/src/calls.c:3961:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v59; // [rsp+30h] [rbp-370h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_library_call_value_1/src/calls.c:3962:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v60; // [rsp+34h] [rbp-36Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_library_call_value_1/src/calls.c:3963:4: error: expected ';' after expression
rtx v61; // [rsp+38h] [rbp-368h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_library_call_value_1/src/calls.c:3963:5: error: use of undeclared identifier 'v61'
rtx v61; // [rsp+38h] [rbp-368h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_library_call_value_1/src/calls.c:3964:4: error: expected ';' after expression
rtx v62; // [rsp+40h] [rbp-360h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_library_call_value_1/src/obj/calls.o] Error 1
